correcao no controller do IBGE, retirado proxy
